[tool.poetry]
name = "pcd"
version = "0.1.0"
description = ""
authors = ["Andrey Ivanov <ivnv.xd@gmail.com>"]
readme = "README.md"
packages = [
    {include = "main"},
    {include = "calibrator"},
    {include = "pointcloud"},
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
depthai = "^2.21.2.0"
opencv-python = "^4.7.0.72"
open3d = "^0.17.0"
loguru = "^0.7.0"

scikit-learn = "^1.2.2"
pyyaml = "^6.0"
addict = "^2.4.0"
pillow = "^9.5.0"
pandas = "^2.0.2"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
